--- a/style.css
+++ b/style.css
@@ -9,12 +9,15 @@ nav {
     justify-content: center;
     background-color: lightgray;
     padding: 10px;
+    position: fixed;
+    top: 0;
     
     
     
 }
 .nav-list{
     display: flex;
+    
     list-style-type: none;
     font-size: 20px;
     font-weight: bold;
@@ -28,9 +31,14 @@ nav {
     text-decoration: none;
     color: black;
 }
+.link:hover{
+    border-bottom: 1px solid black;
+}
 
 h1{
     text-align: center;
+    margin-top: 55px;
+    width: 100%;
 }
 
 .container{
@@ -38,6 +46,7 @@ h1{
     flex-direction: row;
     flex-wrap: wrap;
     margin: 10px;
+    justify-content: center;
 }
 
 .card{
@@ -45,9 +54,45 @@ h1{
     text-align: center;
     border: 1px solid grey ;
     border-radius: 5px;
+    padding: 10px;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.card:hover{
+    border: 1px solid orange;
 }
 
 .card img{
     width: 150px;
     height: 150px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.card-title{
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.card-rating{
+    margin-bottom: 5px;
+}
+.card-price{
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.add-to-cart{
+    background-color: rgb(17, 201, 17);
+    color: white;
+    border-radius: 4px;
+    padding: 5px 10px;
+    border: none;
+}
+
+.add-to-cart:hover{
+    background-color: rgb(14, 141, 14);
 }
